<resources>
    <string name="app_name">TodoApp</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="REGISTER">REGISTER</string>
    <string name="LOGIN">LOGIN</string>
    <string name="TITLE">TITLE</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="ADD">ADD</string>
    <string name="LOG_OUT">LOG OUT</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="BACK">BACK</string>
    <string name="DELETE">DELETE</string>
    <string name="EDIT">EDIT</string>
    <string name="DETAIL">DETAIL</string>
    <string name="Date">Date</string>
</resources>