<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/list_fragment_item"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="16dp"

    android:padding="16dp"

    android:background="@drawable/list_fragment_item"

    tools:context=".view.MainNavHost">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"

        android:text="@string/TITLE"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"

        android:text="@string/DESCRIPTION"

        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@android:color/holo_red_dark"

        android:text="@string/DELETE"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_detail"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_detail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/DETAIL"

        app:layout_constraintTop_toBottomOf="@id/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>