<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/register_fragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"

    tools:context=".view.MainNavHost">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/Username" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/Email" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/Password" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:text="@string/SUBMIT" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:text="@string/LOGIN"

            android:backgroundTint="@color/teal_700" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>