<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/compose_fragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"

    tools:context=".view.MainNavHost">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/Title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:hint="@string/Description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:text="@string/SUBMIT" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:text="@string/BACK"

            android:backgroundTint="@color/teal_700" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>